# rustmergency

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
config/: sample.toml
src/: config.rs  errors.rs  logger.rs  main.rs  merger.rs  remote.rs  step.rs
