[package]
name = "rustmergency"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
