[package]
name = "rustmergency"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
